--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,20 @@
-alembic==1.0.1
-blinker==1.4
-Click==7.0
-dnspython==1.16.0
-dominate==2.3.4
-email-validator==1.1.1
-Flask==1.0.2
+alembic==1.4.3
+click==7.1.2
+dominate==2.5.2
+Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
-Flask-Login==0.4.1
-Flask-Mail==0.9.1
-Flask-Migrate==2.2.1
+Flask-Migrate==2.5.3
 Flask-Script==2.0.6
-Flask-SimpleMDE==0.3.0
-Flask-SQLAlchemy==2.3.2
-Flask-Uploads==0.2.1
-Flask-WTF==0.14.2
-gunicorn==19.9.0
-gyp==0.1
-idna==2.10
-itsdangerous==0.24
-Jinja2==2.10
-Mako==1.0.7
-markdown2==2.3.6
-MarkupSafe==1.0
-olefile==0.46
-Pillow==6.2.1
-psycopg2==2.7.5
-psycopg2-binary==2.7.5
-pycryptodomex==3.6.1
-python-dateutil==2.7.3
-python-editor==1.0.3
-six==1.11.0
-SQLAlchemy==1.2.12
+Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
+itsdangerous==1.1.0
+Jinja2==2.11.2
+Mako==1.1.3
+MarkupSafe==1.1.1
+python-dateutil==2.8.1
+python-editor==1.0.4
+six==1.15.0
+SQLAlchemy==1.3.19
 visitor==0.1.3
-Werkzeug==0.14.1
-WTForms==2.2.1
+Werkzeug==1.0.1
+WTForms==2.3.3
